samples/_failures_safe/1761790115_8a9d8e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_41250cc4.c: In function ‘print_token’:
./samples/SAFE/__tmp_41250cc4.c:162:14: error: expected ‘)’ at end of input
  162 |     if (token
      |        ~     ^
      |              )
./samples/SAFE/__tmp_41250cc4.c:162:5: error: expected declaration or statement at end of input
  162 |     if (token
      |     ^~
